--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,11 +1,11 @@
 /** BASE **/
-@import './base/fonts.css';
-@import './base/util.css';
+/* @import './base/fonts.css'; */
+/* @import './base/util.css'; */
 
 /** VIEWS **/
-@import './views/app.css';
-@import './views/toy-app.css';
+/* @import './views/app.css'; */
+/* @import './views/toy-app.css'; */
 
 /** COMPONENTS **/
-@import './components/toy-list.css';
-@import './components/about-page.css';
+/* @import './components/toy-list.css'; */
+/* @import './components/about-page.css'; */
