--- a/src/assets/scss/basics/_layout.scss
+++ b/src/assets/scss/basics/_layout.scss
@@ -1,35 +1,48 @@
-.main-layout {
-    display: grid;
-    grid-template-columns: $layoutPadding 1fr $layoutPadding;
-
-    > * {
-        grid-column: 2;
-    }
-
-    > *.full {
-        grid-column: 1 / -1;
-    }
-
-    > *:not(.full) {
-        display: grid;
-        grid-auto-flow: dense;
-        grid-template-columns: repeat( 6, 1fr );
-    }
-
-    @include for-narrow-layout {
-        @include layoutGTC($break-narrow);
-    }
-    
-    @include for-normal-layout {
-        @include layoutGTC($break-normal);
-    }
-    
-    @include for-wide-layout {
-        @include layoutGTC($break-wide);
-    }
+.container {
+  max-width: 1500px;
+  padding: 10px;
 }
 
+.main-container {
+  display: grid;
+  grid-template-columns: 20px 1fr 20px;
 
-.main-text {
-    margin-bottom: rem(90px);
+  > * {
+    grid-column: 2;
+    // background: lightcoral;
+
+    &.full {
+      grid-column: 1 /-1;
+    }
+  }
+
+  @include for-narrow-layout {
+    grid-template-columns:
+      minmax(20px, 1fr)
+      minmax(auto, $mobile-breakpoint)
+      minmax(20px, 1fr);
+  }
+  @include for-normal-layout {
+    grid-template-columns:
+      minmax(20px, 1fr)
+      minmax(auto, $narrow-breakpoint)
+      minmax(20px, 1fr);
+  }
+  @include for-wide-layout {
+    grid-template-columns:
+      minmax(20px, 1fr)
+      minmax(auto, $normal-breakpoint)
+      minmax(20px, 1fr);
+  }
+}
+
+.main-layout {
+  background: red;
+  width: 100%;
+}
+
+.card-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  grid-gap: 20px;
 }
